--- a/css/index.css
+++ b/css/index.css
@@ -6,10 +6,13 @@ html, body {
     box-sizing: border-box;
 }
 .wrap{
+    width: 100%;
     height: 80px;
     overflow: hidden;
+    transition: all 2s;
 }
 .header{
+    width: 100%;
     display: grid;
     grid-template-columns: 15% 70% 15%;
     height: 80px;
@@ -20,12 +23,13 @@ html, body {
     padding-left: 30px;
 }
 .menu_bar{
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    
 }
 .wrap:hover {
-    overflow: visible;
+    height:450px;
 }
 .header_right{
     display: flex;
@@ -35,8 +39,7 @@ html, body {
     display: grid;
     grid-template-columns: 15% 70% 15%;
     grid-template-rows: 350px;
-    background-color: gray;
-    border-radius: 0 0 0 20px;   
+    background-color: rgba(255, 255, 255, 0.2);
     
 }
 .sub_menu {
@@ -46,4 +49,9 @@ html, body {
 }
 .sub_menu >div>div{
     height: 35px;
+}
+.back_img{
+    width: 100%;
+    height: 500px;
+   background-image:url("../img/background.jpg");
 }
