--- a/css/index.css
+++ b/css/index.css
@@ -42,16 +42,21 @@ html, body {
     background-color: rgba(255, 255, 255, 0.2);
     
 }
-.sub_menu {
+.sub_menu_01 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 
 }
-.sub_menu >div>div{
+.sub_menu_01 >div>div{
     height: 35px;
 }
 .back_img{
     width: 100%;
     height: 500px;
-   background-image:url("../img/background.jpg");
+    background-image:url("../img/background.jpg");
+}
+.back_img > img{
+    margin: auto;
+    display: block;
+    padding-top: 50px;
 }
