--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,16 @@
-body,html{
+1body,html{
     padding: 0;
     margin: 0;
 }
 *{
     box-sizing: border-box;
+    letter-spacing: -0.09em;
+    color:#1f1f1f;
+    font-family: "Noto Sans KR", sans-serif;
+    text-decoration: none;
+    list-style: none;
 }
+
 .main{
     border: 1px solid saddlebrown;
     width:100%;
@@ -14,9 +20,16 @@ body,html{
 }
 .header{
     display: flex;
+    justify-content: space-evenly;
     width: 100%;
     border: 1px solid rgb(0, 0, 0);
     height: 120px;
+    align-items: center;
+
+}
+.header_menu {
+    display: grid;
+    grid-template-columns: repeat(6, 150px);
 }
 .submenu_all{
     grid-template-columns: repeat(6, 300px);
@@ -24,3 +37,32 @@ body,html{
     height: 450px;
     background-color: rgb(196, 196, 223);
 }
+
+.header > div > a{
+ margin: 40px;
+ 
+}
+.menu_right{
+    display: flex;
+}
+.lang > a{
+    font-size: 15pt;
+    font-weight: 600;
+    color: rgb(59, 59, 59);
+}
+.lang >a> span{
+    vertical-align:middle;
+    margin-right: 10px;
+}
+.hamburger > span{
+    font-size: 2rem;
+    color:  rgb(59, 59, 59);
+}
+.submenu_all{
+    display: flex;
+    line-height: 40px;
+}
+.submenu_all {
+ 
+}
+
